----------------------------------------------------------------------
 OmegaT 1.6.1 Changes
----------------------------------------------------------------------

1.6.1 vs. 1.4.5.04
   54 Enchancements
  113 Bugfixes

----------------------------------------------------------------------
1.6.1
Contains a new HTML Help Compiler (HCC) filter

 Implemented requests:

  - HTML Help Compiler filter
  http://sourceforge.net/support/tracker.php?aid=1592946

  - Restore GUI widget
   http://sourceforge.net/support/tracker.php?aid=1557794

 Other enhancements:

  - Command line option to select a different locale than the default

  - Command line option to load an external resource bundle file

 Bug fixes:

  - Arbitrary modification of project_save.tmx
  http://sourceforge.net/support/tracker.php?aid=1594483

----------------------------------------------------------------------
1.6.0_02
Contains a number of quick bug fixes and a documentation enhancement.

 Enhancements:

  - [Doc] readme.txt: some clarification on Java
  http://sourceforge.net/support/tracker.php?aid=1592468

 Bug fixes:

  -Incorreft referral in index.html in root dir
  http://sourceforge.net/support/tracker.php?aid=1591028

  - Links not working in instant start guide
  http://sourceforge.net/support/tracker.php?aid=1591025

  - Search in files shouldn't be checked by default
  http://sourceforge.net/support/tracker.php?aid=1590209

  - Incorrect display in search function
  http://sourceforge.net/support/tracker.php?aid=1590208

  - Force kill causes project_save.tmx destruction
  http://sourceforge.net/support/tracker.php?aid=1583560

  - First segment validation persistence issue
  http://sourceforge.net/support/tracker.php?aid=1587606

  - Project TM not read by older versions
  http://sourceforge.net/support/tracker.php?aid=1592377

  - TMX 1.4 files output by OmegaT refer to TMX 1.1 DTD
  http://sourceforge.net/support/tracker.php?aid=1592375
