@@ -1,14 +1,14 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   <title>Supported File Formats - OmegaT 1.6.0 User Manual</title>
+   <title>Supported File Formats - OmegaT 1.6.1 User Manual</title>
 </head>
 <body>
 
 <h1>Supported File Formats</h1>
 
 <p>
-OmegaT 1.6.0 natively supports translating the following types of files:
+OmegaT 1.6.1 natively supports translating the following types of files:
 </p>
 
 <ul>
@@ -19,6 +19,7 @@ OmegaT 1.6.0 natively supports translating the following types of files:
    <li>Plain text files</li>
    <li>Java localization files (resource bundles)</li>
    <li>INI files (Key=Value text)</li>
+   <li>HTML Help Compiler files</li>
 </ul>
 
 <p>
