@@ -1,7 +1,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   <title>The User Interface - OmegaT 1.6.0 User Manual</title>
+   <title>The User Interface - OmegaT 1.6.1 User Manual</title>
 </head>
 <body>
 
