@@ -35,6 +35,7 @@
 # The version number is taken from Version.properties, key version
 # and inserted into the following template
 version-template=OmegaT-{0}
+version-update-template=OmegaT-{0}_{1}
 
 # buttons
 BUTTON_OK=&OK
@@ -190,7 +191,7 @@ MW_OPTIONSMENU_SENTSEG=&Segmentation...
 
 MW_OPTIONSMENU_ALWAYS_CONFIRM_QUIT=&Always Confirm Quit
 
-MW_OPTIONSMENU_RESTORE_GUI=&Restore main window
+MW_OPTIONSMENU_RESTORE_GUI=&Restore Main Window
 
 TF_MENU_HELP=&Help
 
@@ -717,7 +718,9 @@ OpenDoc_ERROR_IN_FILE=Error in file
 
 # AboutDialog.java
 
-ABOUTDIALOG_VERSION_PREFIX=OmegaT version 
+ABOUTDIALOG_VERSION=OmegaT version {0}
+
+ABOUTDIALOG_VERSION_UPDATE=OmegaT version {0}, update {1}
 
 ABOUTDIALOG_TITLE=About OmegaT
 
